--- a/WiredBrainCoffee.StorageApp/WiredBrainCoffee.StorageApp.csproj
+++ b/WiredBrainCoffee.StorageApp/WiredBrainCoffee.StorageApp.csproj
@@ -3,8 +3,12 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <Nullable>enable</Nullable>
     <LangVersion>9.0</LangVersion>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.11" />
+  </ItemGroup>
 
 </Project>
